# course-navigator

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.en.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
Casks/: course-navigator.rb
backend/course_navigator/: __init__.py  ai.py  app.py  asr.py  config.py  cookies.py  library.py  models.py  online_asr.py  processes.py  subtitles.py  ytdlp.py
backend/tests/: test_ai.py  test_app.py  test_asr.py  test_library.py  test_processes.py  test_smoke.py  test_subtitles.py  test_ytdlp.py
docs/: ios-local-install.md  mac-install.en.md  mac-install.md  prompts.zh.md
frontend/: index.html
frontend/src/: App.i18n.test.tsx  App.tsx  api.test.ts  api.ts  asrWorkbench.test.ts  asrWorkbench.ts  smoke.test.ts  styles.css  styles.test.ts  subtitleUpload.test.ts  subtitleUpload.ts  types.ts  utils.test.ts  utils.ts
ios/: project.yml
ios/CourseNavigatorMobile/: AppModel.swift  BackendDiscovery.swift  Info.plist  (+3 more)
ios/CourseNavigatorMobile.xcodeproj/: project.pbxproj
launcher/: index.html  package-lock.json  package.json  tsconfig.json
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: asr_cache.rs  config.rs  lib.rs  main.rs  model_config.rs  models.rs  runtime.rs  workspace.rs
launcher/src-tauri/windows/: installer-hooks.nsh
scripts/: build-mac-dmg.sh  ios-device-preflight.sh  ios-install-device.sh  prepare-mac-runtime-source.sh  prepare-runtime-source.mjs  start-mobile-backend.sh  start.sh
(+20 files in other folders)
